# SmartJsonPy

./: CHANGELOG.md  README.md  pyproject.toml  setup.py
SmartJsonPy/: cleaner.py  extractor.py  transformer.py  utils.py  validator.py
scripts/: smoke_install.sh
tests/: test_cleaner.py  test_extractor.py  test_transformer.py  test_utils.py  test_validator.py
